Updated copyright year in licence and package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name"          : "zmqd",
     "description"   : "A ∅MQ wrapper for the D programming language",
     "homepage"      : "https://github.com/kyllingstad/zmqd",
-    "copyright"     : "Copyright (c) 2013, Lars T. Kyllingstad",
+    "copyright"     : "Copyright (c) 2013–2014, Lars T. Kyllingstad",
     "license"       : "BSD 3-clause",
     "authors"       : [ "Lars Kyllingstad" ],
     "dependencies"  : { "zeromq": "~master" },
