--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ install:
   - export LIBRARY_PATH="${HOME}/lib:${LIBRARY_PATH}"
   - export LD_LIBRARY_PATH="${HOME}/lib:${LD_LIBRARY_PATH}"
 
-  - LIBSODIUM_VERSION=1.0.3
-  - curl -fsSL https://github.com/jedisct1/libsodium/releases/download/${LIBSODIUM_VERSION}/libsodium-${LIBSODIUM_VERSION}.tar.gz | tar -zxf -
-  - pushd libsodium-${LIBSODIUM_VERSION}
+  - LIBSODIUM_VERSION=1.0.18
+  - curl -fsSL https://download.libsodium.org/libsodium/releases/libsodium-${LIBSODIUM_VERSION}-stable.tar.gz | tar -zxf -
+  - pushd libsodium-stable
   - ./configure --prefix=${HOME}
   - make install -j2
   - popd
 
-  - ZEROMQ_VERSION=4.1.3
-  - curl -fsSL http://download.zeromq.org/zeromq-${ZEROMQ_VERSION}.tar.gz | tar -zxf -
-  - pushd zeromq-${ZEROMQ_VERSION}
+  - ZEROMQ_VERSION=4.3.2
+  - curl -fsSL https://github.com/zeromq/libzmq/archive/v${ZEROMQ_VERSION}.tar.gz | tar -zxf -
+  - pushd libzmq-${ZEROMQ_VERSION}
   - ./configure --prefix=${HOME}
   - make install -j2
   - popd
